--- a/index.html
+++ b/index.html
@@ -5,18 +5,11 @@
 <head>
 
     <!-- COMMON TAGS -->
-    <meta charset="utf-8">
-    <title>Constructora HBA - DecoAsfalto</title>
-    <!-- Search Engine -->
+   <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Impermeabilización de cubiertas, especialización en membranas, revestimiento y decoración en asfalto para obras civiles y privadas.">
-    <!-- Schema.org for Google -->
-    <meta itemprop="name" content="Constructora HBA - DecoAsfalto">
-    <meta itemprop="description" content="Impermeabilización de cubiertas, especialización en membranas, revestimiento y decoración en asfalto para obras civiles y privadas.">
-    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta name="og:title" content="Constructora HBA - DecoAsfalto">
-    <meta name="og:description" content="Impermeabilización de cubiertas, especialización en membranas, revestimiento y decoración en asfalto para obras civiles y privadas.">
-    <meta name="og:type" content="website">
-    
+    <meta name="author" content="Constructora HBA - DecoAsfalto®">
+    <title>Constructora HBA</title>
     <link rel="shortcut icon" href="IMG/favicon.ico">
     <title>Constructora HBA</title>
 
