--- a/chinchorronorte.html
+++ b/chinchorronorte.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <link rel="shortcut icon" href="IMG/favicon.ico">
     <title>Proyectos: Arica, Constructora Armas - Constructora HBA</title>
 
     <!-- Bootstrap core CSS -->
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="IMG/logosnav.png" s alt="">
+                <img src="IMG/logosnav.svg" alt="Logos Navbar" width="230">
 
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -171,7 +171,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <img src="IMG/doslogos.png" class="img-fluid" alt="Responsive image">
+                    <img src="IMG/doslogos.svg" alt="Logos Navbar" class="img-fluid" width="330">
                 </div>
 
             </div>
