--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
 <head>
 
     <!-- COMMON TAGS -->
-    <meta charset="utf-8">
+   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Impermeabilización de cubiertas, especialización en membranas, revestimiento y decoración en asfalto para obras civiles y privadas.">
     <meta name="author" content="Constructora HBA - DecoAsfalto®">
     <title>Constructora HBA</title>
     <link rel="shortcut icon" href="IMG/favicon.ico">
-  
     
 
     <!-- Bootstrap core CSS -->
@@ -33,7 +32,7 @@
     <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="IMG/logosnav.svg" alt="Logos Navbar" width="230">
+                <img src="IMG/logosnav.png" s alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -374,7 +373,7 @@
                 </div>
 
                 <div class="col-md-4">
-                     <img src="IMG/doslogos.svg" alt="Logos Navbar" class="img-fluid" width="330">
+                    <img src="IMG/doslogos.png" class="img-fluid" alt="Responsive image">
                 </div>
 
             </div>
