--- a/jarlan.html
+++ b/jarlan.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-       <link rel="shortcut icon" href="IMG/favicon.ico">
 
     <title>Proyectos: Parque Jarlán - Constructora HBA</title>
 
@@ -37,7 +36,7 @@
     <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">
-              <img src="IMG/logosnav.svg" alt="Logos Navbar" width="230">
+               <img src="IMG/logosnav.png"s alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -175,7 +174,7 @@
             </div>
                 
             <div class="col-md-4">
-              <img src="IMG/doslogos.svg" alt="Logos Navbar" class="img-fluid" width="330">
+                <img src="IMG/doslogos.png" class="img-fluid" alt="Responsive image">
                </div>        
                       
 </div>  
