--- a/condominio.html
+++ b/condominio.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <link rel="shortcut icon" href="IMG/favicon.ico">
     <title>Proyectos: Condominio Francisco De Aguirre - Constructora HBA</title>
 
     <!-- Bootstrap core CSS -->
