--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- COMMON TAGS -->
    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Impermeabilización de cubiertas, especialización en membranas, revestimiento y decoración en asfalto para obras civiles y privadas.">
+    <meta name="description" content="Impermeabilización de cubiertas, especialización en membranas, revestimiento y decoración en asfalto para obras públicas y privadas.">
     <meta name="author" content="Constructora HBA - DecoAsfalto®">
     <title>Constructora HBA</title>
     <link rel="shortcut icon" href="IMG/favicon.ico">
@@ -146,7 +146,7 @@
                 <br>
                 <br>
                 <div class="container text-left ">
-                    <p>Desde 2015, HBA Constructora se ha desarrollado tanto en el ámbito de las edificaciones habitacionales, obras civiles y privadas.</p>
+                    <p>Desde 2015, HBA Constructora se ha desarrollado tanto en el ámbito de las edificaciones habitacionales, obras públicas y privadas.</p>
                     <p>Contamos con profesionales especializados en la entrega de propuestas de especificación, propuestas técnicas-económicas, revisiones de proyectos, supervisores en terreno encargados de la ejecución de proyectos, entrega de protocolos y garantías.</p>
                     <p>Nuestra empresa cuenta con dos áreas de especialización: Impermeabilización (<b>HBA</b>) - Decoración y Revestimiento (<b>Deco Asfalto</b>).</p>
 
